# PAFa

./: .gitignore  CMakeLists.txt
include/: alias.h  analyser.h  data_structure.h  input.h  overlap.h
src/: analyser.cpp  data_structure.cpp  input.cpp  main.cpp  overlap.cpp
